# aseprite-parser

./: .gitignore  .out  Aseprite_parser.cpp  Aseprite_parser.h  CMakeLists.txt  README.md  main.cpp  test.aseprite
